<resources>
    <string name="app_name">CryptoTrack</string>
    <string name="logo_name1">Crypto</string>
    <string name="logo_name2">Track</string>
    <string name="ft_1">No account yet?</string>
    <string name="ft_2">Create one</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="login_ph">Username</string>
    <string name="pass_ph">Password</string>
    <string name="email">E-mail</string>
    <string name="log_invalid_cred_message">Wrong username or password</string>
    <string name="search_loading_data">Please wait, data is loading</string>
    <string name="search_error_data">Could not read data from API</string>
</resources>